# ipwarn

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  ipwarn  pyproject.toml  setup.sh
.circleci/: config.yml
.github/workflows/: release.yml  test.yml
config/: ipwarn-systemd-easy-install.sh  ipwarn.conf  ipwarn.conf.example  ipwarn.service
ipwarn/: __init__.py  __main__.py  config.py  ip_checkers.py  logger.py
ipwarn/dns_providers/: __init__.py  base.py  godaddy.py  porkbun.py
ipwarn/notifiers/: __init__.py  base.py  telegram.py
tests/: __init__.py  conftest.py  test_config.py  test_dns_providers.py  test_ip_checkers.py
