[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipwarn"
version = "2.0.0"
description = "Dynamic DNS update client with modular provider support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Pablo Gómez-Caldito Gómez"}
]
dependencies = [
    "requests>=2.31.0"
]

[project.scripts]
ipwarn = "ipwarn.__main__:main"

[tool.setuptools]
packages = ["ipwarn", "ipwarn.dns_providers", "ipwarn.notifiers"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0"
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
